--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.9.7",
     "@vue/cli": "^3.11.0",
+    "axios": "^0.19.2",
     "nuxt": "^2.0.0",
     "vue-notifications": "^1.0.2"
   },
