--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@vue/cli": "^3.12.1",
     "axios": "^0.19.2",
     "nuxt": "^2.14.4",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.3",
     "vue-notifications": "^1.0.2",
+    "vue-template-compiler": "^2.6.12",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
